--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <!--
   Adresse URL de base du dossier de publication.
-  <base href="/r002/angular-e04/">
+  <base href="/d002/angular-e04/browser/">
   -->
   <base href="/">
   <meta charset="utf-8">
