--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <!--
   Adresse URL de base du dossier de publication.
-  <base href="/d002/angular-e04/browser/">
+  <base href="/d002/angular-e04/">
   -->
   <base href="/">
   <meta charset="utf-8">
@@ -15,7 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>Exercice Angular 18</title>
+  <title>Exercice Angular 19</title>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
